# deepseek-R1-local-app

./: README.md  app.py  chainlit.md  pyproject.toml
